<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/iv_location_detail_back"
        android:layout_width="@dimen/button_back_size_30dp"
        android:layout_height="@dimen/button_back_size_30dp"
        android:layout_margin="@dimen/margin_2dp"
        android:contentDescription="@string/button_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <TextView
        android:id="@+id/label_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_5dp"
        android:text="@string/title_search"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintBottom_toTopOf="@+id/et_location_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_location_detail_back" />

    <EditText
        android:id="@+id/et_location_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10dp"
        android:layout_marginBottom="@dimen/any_150dp"
        android:background="@color/main_background"
        android:hint="@string/hint_location_search_name"
        android:textColorHint="@color/second_gray"
        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintBottom_toTopOf="@+id/et_location_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_title" />

    <EditText
        android:id="@+id/et_location_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10dp"
        android:layout_marginBottom="@dimen/any_150dp"
        android:background="@color/main_background"
        android:hint="@string/hint_location_search_type"
        android:textColorHint="@color/second_gray"
        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintBottom_toTopOf="@+id/et_location_dimension"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_location_name" />

    <EditText
        android:id="@+id/et_location_dimension"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10dp"
        android:layout_marginBottom="@dimen/any_150dp"
        android:background="@color/main_background"
        android:hint="@string/hint_location_search_dimension"
        android:textColorHint="@color/second_gray"
        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintBottom_toTopOf="@+id/button_location_run_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_location_type" />

    <Button
        android:id="@+id/button_location_run_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10dp"
        android:text="@string/label_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_location_dimension" />
</androidx.constraintlayout.widget.ConstraintLayout>