<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/padding_2dp"
    android:background="@color/white"
    tools:context=".ui.episodeUi.FragmentEpisodeDetails">

    <LinearLayout
        android:id="@+id/linearLayout_episode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/main_grey"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout_episode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_episode_detail_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/padding_2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="?attr/actionModeCloseDrawable" />

        <TextView
            android:id="@+id/text_title_episode_details"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/episode_information"
            android:textColor="@color/white" />

    </LinearLayout>

    <GridLayout
        android:id="@+id/gridLayout_episode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_2dp"
        android:columnCount="2"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/text_label_episode_characters"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_episode">

        <TextView
            android:id="@+id/text_label_episode_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_name"
            android:ems="4"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/margin_1dp"
            android:layout_marginStart="@dimen/margin_1dp"
            android:layout_marginBottom="@dimen/margin_1dp"
            android:background="@color/main_background"
            app:autoSizeMaxTextSize="@dimen/auto_size_max_text_14sp"
            app:autoSizeTextType="uniform" />

        <TextView
            android:id="@+id/text_episode_detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/margin_1dp"
            android:layout_marginEnd="@dimen/margin_1dp"
            android:layout_marginBottom="@dimen/margin_1dp"
            android:background="@color/main_background"
            app:autoSizeMaxTextSize="@dimen/auto_size_max_text_14sp"
            app:autoSizeTextType="uniform"
            tools:text="Name" />

        <TextView
            android:id="@+id/text_label_episode_episode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_episode"
            android:ems="4"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/margin_1dp"
            android:layout_marginStart="@dimen/margin_1dp"
            android:layout_marginBottom="@dimen/margin_1dp"
            android:background="@color/main_background"
            app:autoSizeMaxTextSize="@dimen/auto_size_max_text_14sp"
            app:autoSizeTextType="uniform" />

        <TextView
            android:id="@+id/text_episode_detail_episode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/margin_1dp"
            android:layout_marginEnd="@dimen/margin_1dp"
            android:layout_marginBottom="@dimen/margin_1dp"
            android:background="@color/main_background"
            app:autoSizeMaxTextSize="@dimen/auto_size_max_text_14sp"
            app:autoSizeTextType="uniform"
            tools:text="Episode" />

        <TextView
            android:id="@+id/text_label_episode_air_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_air_date"
            android:ems="4"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/margin_1dp"
            android:layout_marginStart="@dimen/margin_1dp"
            android:layout_marginBottom="@dimen/margin_1dp"
            android:background="@color/main_background"
            app:autoSizeMaxTextSize="@dimen/auto_size_max_text_14sp"
            app:autoSizeTextType="uniform" />

        <TextView
            android:id="@+id/text_episode_detail_air_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/margin_1dp"
            android:layout_marginEnd="@dimen/margin_1dp"
            android:layout_marginBottom="@dimen/margin_1dp"
            android:background="@color/main_background"
            app:autoSizeMaxTextSize="@dimen/auto_size_max_text_14sp"
            app:autoSizeTextType="uniform"
            tools:text="Air Date" />

    </GridLayout>

    <TextView
        android:id="@+id/text_label_episode_characters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_2dp"
        android:padding="@dimen/padding_2dp"
        android:text="@string/label_episode_details_characters"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/rv_episode_characters"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout_episode" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_episode_characters"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_label_episode_characters" />


</androidx.constraintlayout.widget.ConstraintLayout>